--- a/twitter/Gemfile
+++ b/twitter/Gemfile
@@ -55,3 +55,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'bootstrap-sass',       '3.2.0.0'
 gem 'rails-controller-testing'
 gem 'pry-rails'
+gem 'jquery-rails'
