--- a/twitter/Gemfile
+++ b/twitter/Gemfile
@@ -56,3 +56,6 @@ gem 'bootstrap-sass',       '3.2.0.0'
 gem 'rails-controller-testing'
 gem 'pry-rails'
 gem 'jquery-rails'
+gem 'will_paginate'
+gem 'bootstrap-will_paginate'
+gem 'faker'
